--- a/frontend/package.json
+++ b/frontend/package.json
@@ -5,9 +5,10 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "tsc && vite build",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
-    "preview": "vite preview"
+    "preview": "vite preview",   
+    "build-staging": "tsc && vite build",
+    "build-production": "tsc && vite build"
   },
   "dependencies": {
     "react": "^18.2.0",
