--- a/frontend/package.json
+++ b/frontend/package.json
@@ -6,10 +6,12 @@
   "scripts": {
     "dev": "vite --mode staging",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
-    "preview": "vite preview",   
+    "preview": "vite preview",
     "build-production": "tsc && vite build"
   },
   "dependencies": {
+    "highcharts": "^11.1.0",
+    "highcharts-react-official": "^3.2.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
